Bug 248121 - "X-Mozilla-Status" and spaces inserted into received mail. r/sr=bienvenu@nventure.com